Added css to navbar

--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
         <a href="#" class="navbar-brand">
           <img src="img/logo.svg" alt="logo">
         </a>
-        <button type="button" class="navbar-toggler" data-toggle='collapse' data-target='#myNavbar'>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
           <span class="toggler-icon">
             <i class="fas fa-bars"></i>
           </span>
         </button>
-        <div class="navbar-collapse collapse" id="myNavbar">
+
+        <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="navbar-nav text-capitalize mx-auto">
             <li class="nav-item active">
               <a href="#header" class="nav-link">Home</a>
@@ -63,34 +64,35 @@
             <li class="nav-item">
               <a href="#store" class="nav-link">store</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" >
               <a href="#services" class="nav-link">services</a>
             </li>
             <li class="nav-item">
               <a href="#order" class="nav-link">order</a>
             </li>
           </ul>
-        </div>
-        <div class="nav-info-items d-none d-lg-flex">
-          <div class="nav-info d-flex align-items-center justify-content-between mx-lg-5">
-            <span class="info-icon mx-lg-3 ">
-              <i class="fas fa-phone"></i>
-            </span>
-            <p class="mb-0">123-456-7891</p>
-          </div>
-          <div id="cart-info" class="nav-info cart-info d-flex align-items-center justify-content-between mx-lg-5">
-            <span class="car-info-icon mr-lg-3 ">
-              <i class="fas fa-shopping-cart"></i>
-            </span>
-            <p class="text-capitailize mb-0">
-              <span class="item-count">2</span>
-              items-$
-              <span class="item-total">
-                10.49
+          <div class="nav-info-items d-none d-lg-flex">
+            <div class="nav-info d-flex align-items-center justify-content-between mx-lg-5">
+              <span class="info-icon mx-lg-3 ">
+                <i class="fas fa-phone"></i>
               </span>
-            </p>
+              <p class="mb-0">123-456-7891</p>
+            </div>
+            <div id="cart-info" class="nav-info cart-info d-flex align-items-center justify-content-between mx-lg-5">
+              <span class="cart-info-icon mr-lg-3 ">
+                <i class="fas fa-shopping-cart"></i>
+              </span>
+              <p class="text-capitailize mb-0">
+                <span class="item-count">2</span>
+                items - $
+                <span class="item-total">
+                  10.49
+                </span>
+              </p>
+            </div>
           </div>
         </div>
+        
       </nav>
   </header>
 
