--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
         </div>
         
       </nav>
+
+    <!-- banner -->
+      <div class="container-fluid">
+        <div class="row max-height justify-content-center align-items-center">
+          <div class="col-10 banner text-center mx-auto">
+              <h1>Welcome to <strong class="banner-title">Grandma's Bakery</strong></h1>
+              <a href="#store" class="btn banner-link text-uppercase my-2">explore</a>
+          </div>
+        </div>
+      </div>
+
+    
   </header>
 
 
