--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
               <a href="#order" class="nav-link">order</a>
             </li>
           </ul>
-          <div class="nav-info-items d-none d-lg-flex">
-            <div class="nav-info d-flex align-items-center justify-content-between mx-lg-5">
+          <div class="nav-info-items d-none d-lg-flex"> <div class="nav-info d-flex align-items-center justify-content-between mx-lg-5">
               <span class="info-icon mx-lg-3 ">
                 <i class="fas fa-phone"></i>
               </span>
@@ -104,11 +103,24 @@
           </div>
         </div>
       </div>
-
-    
   </header>
 
-
+  <section id="about" class="about py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-10 col-md-6 mx-auto my-5">
+          <h1>About <strong class="banner-title">Us</strong></h1>
+          <p class="text-muted my-4 w-75">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, incidunt! Voluptates molestiae, porro. Culpa, ut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias veniam cupiditate animi, quo omnis nihil.</p>
+          <a href="#" class="btn btn-black text-uppercase">explore</a>
+        </div>
+        <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
+          <div class="about-img-container">
+            <img src="img/sweets-1.jpeg" class="img-fluid" alt="sweets">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
   <!-- bootstrap js -->
