added store button and searchbar

--- a/index.html
+++ b/index.html
@@ -41,86 +41,123 @@
     https://www.iconfinder.com/bluelabelicons
          -->
   <!--end of icons icons -->
-  <header id="header">
-    <!-- navbar -->
-      <nav class="navbar navbar-expand-lg px-4">
-        <a href="#" class="navbar-brand">
-          <img src="img/logo.svg" alt="logo">
-        </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
-          <span class="toggler-icon">
-            <i class="fas fa-bars"></i>
-          </span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="navbar-nav text-capitalize mx-auto">
-            <li class="nav-item active">
-              <a href="#header" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="#about" class="nav-link">about</a>
-            </li>
-            <li class="nav-item">
-              <a href="#store" class="nav-link">store</a>
-            </li>
-            <li class="nav-item" >
-              <a href="#services" class="nav-link">services</a>
-            </li>
-            <li class="nav-item">
-              <a href="#order" class="nav-link">order</a>
-            </li>
-          </ul>
-          <div class="nav-info-items d-none d-lg-flex"> <div class="nav-info d-flex align-items-center justify-content-between mx-lg-5">
-              <span class="info-icon mx-lg-3 ">
-                <i class="fas fa-phone"></i>
-              </span>
-              <p class="mb-0">123-456-7891</p>
-            </div>
-            <div id="cart-info" class="nav-info cart-info d-flex align-items-center justify-content-between mx-lg-5">
-              <span class="cart-info-icon mr-lg-3 ">
-                <i class="fas fa-shopping-cart"></i>
-              </span>
-              <p class="text-capitailize mb-0">
-                <span class="item-count">2</span>
-                items - $
-                <span class="item-total">
-                  10.49
+  <!-- header -->
+    <header id="header">
+      <!-- navbar -->
+        <nav class="navbar navbar-expand-lg px-4">
+          <a href="#" class="navbar-brand">
+            <img src="img/logo.svg" alt="logo">
+          </a>
+          <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
+            <span class="toggler-icon">
+              <i class="fas fa-bars"></i>
+            </span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="navbar-nav text-capitalize mx-auto">
+              <li class="nav-item active">
+                <a href="#header" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="#about" class="nav-link">about</a>
+              </li>
+              <li class="nav-item">
+                <a href="#store" class="nav-link">store</a>
+              </li>
+              <li class="nav-item" >
+                <a href="#services" class="nav-link">services</a>
+              </li>
+              <li class="nav-item">
+                <a href="#order" class="nav-link">order</a>
+              </li>
+            </ul>
+            <div class="nav-info-items d-none d-lg-flex"> <div class="nav-info d-flex align-items-center justify-content-between mx-lg-5">
+                <span class="info-icon mx-lg-3 ">
+                  <i class="fas fa-phone"></i>
                 </span>
-              </p>
+                <p class="mb-0">123-456-7891</p>
+              </div>
+              <div id="cart-info" class="nav-info cart-info d-flex align-items-center justify-content-between mx-lg-5">
+                <span class="cart-info-icon mr-lg-3 ">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+                <p class="text-capitailize mb-0">
+                  <span class="item-count">2</span>
+                  items - $
+                  <span class="item-total">
+                    10.49
+                  </span>
+                </p>
+              </div>
+            </div>
+          </div>
+          
+        </nav>
+
+      <!-- banner -->
+        <div class="container-fluid">
+          <div class="row max-height justify-content-center align-items-center">
+            <div class="col-10 banner text-center mx-auto">
+                <h1>Welcome to <strong class="banner-title">Grandma's Bakery</strong></h1>
+                <a href="#store" class="btn banner-link text-uppercase my-2">explore</a>
             </div>
           </div>
         </div>
-        
-      </nav>
+    </header>
 
-    <!-- banner -->
-      <div class="container-fluid">
-        <div class="row max-height justify-content-center align-items-center">
-          <div class="col-10 banner text-center mx-auto">
-              <h1>Welcome to <strong class="banner-title">Grandma's Bakery</strong></h1>
-              <a href="#store" class="btn banner-link text-uppercase my-2">explore</a>
+  <!-- about -->
+    <section id="about" class="about py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-10 col-md-6 mx-auto my-5">
+            <h1>About <strong class="banner-title">Us</strong></h1>
+            <p class="text-muted my-4 w-75">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, incidunt! Voluptates molestiae, porro. Culpa, ut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias veniam cupiditate animi, quo omnis nihil.</p>
+            <a href="#" class="btn btn-black text-uppercase">explore</a>
+          </div>
+          <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
+            <div class="about-img-container">
+              <img src="img/sweets-1.jpeg" class="img-fluid" alt="sweets">
+            </div>
           </div>
         </div>
       </div>
-  </header>
+    </section>
 
-  <section id="about" class="about py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-10 col-md-6 mx-auto my-5">
-          <h1>About <strong class="banner-title">Us</strong></h1>
-          <p class="text-muted my-4 w-75">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, incidunt! Voluptates molestiae, porro. Culpa, ut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias veniam cupiditate animi, quo omnis nihil.</p>
-          <a href="#" class="btn btn-black text-uppercase">explore</a>
+  <!-- store -->
+    <section class="store py-5" id="store">
+      <div class="container">
+        <div class="row">
+          <div class="col-10 col-sm-6 mx-auto text-center">
+            <h1 class="text-capitalize">our <strong class="banner-title">store</strong></h1>
+          </div>
         </div>
-        <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
-          <div class="about-img-container">
-            <img src="img/sweets-1.jpeg" class="img-fluid" alt="sweets">
+        <div class="row">
+          <div class="col-lg-8 d-flex mx-auto  justify-content-around sortBtn flex-wrap">
+            <a href="#" class="btn btn-black text-uppercase m-2 filter-btn" data-filter='all'>All</a>
+            <a href="#" class="btn btn-black text-uppercase m-2 filter-btn" data-filter='all'>cakes</a>
+            <a href="#" class="btn btn-black text-uppercase m-2 filter-btn" data-filter='all'>cupcakes</a>
+            <a href="#" class="btn btn-black text-uppercase m-2 filter-btn" data-filter='all'>sweets</a>
+            <a href="#" class="btn btn-black text-uppercase m-2 filter-btn" data-filter='all'>doughnuts</a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-10 mx-auto col-md-6">
+            <form>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text search-box" id="search-icon">
+                    <i class="fas fa-search"></i>
+                  </span>
+                </div>
+                <input type="text" class="form-control" placeholder="item..." id="search-item">
+              </div>
+            </form>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
   <!-- bootstrap js -->
