Added store cards

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <h1 class="text-capitalize">our <strong class="banner-title">store</strong></h1>
           </div>
         </div>
+
         <div class="row">
           <div class="col-lg-8 d-flex mx-auto  justify-content-around sortBtn flex-wrap">
             <a href="#" class="btn btn-black text-uppercase m-2 filter-btn" data-filter='all'>All</a>
@@ -142,6 +143,7 @@
             <a href="#" class="btn btn-black text-uppercase m-2 filter-btn" data-filter='all'>doughnuts</a>
           </div>
         </div>
+
         <div class="row">
           <div class="col-10 mx-auto col-md-6">
             <form>
@@ -154,6 +156,93 @@
                 <input type="text" class="form-control" placeholder="item..." id="search-item">
               </div>
             </form>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-sm-6 col-10 my-3 mx-auto">
+            <div class="card store-card">
+              <div class="store-img-container">
+                <img src="./img/cake-1.jpeg" alt="" class="card-img-top store-img">
+                <span class="shopping-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body d-flex justify-content-between">
+                <h5>Cake 1</h5>
+                <h5>$ <strong>5</strong></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 col-10 my-3 mx-auto">
+            <div class="card store-card">
+              <div class="store-img-container">
+                <img src="./img/cake-2.jpeg" alt="" class="card-img-top store-img">
+                <span class="shopping-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body d-flex justify-content-between">
+                <h5>Cake 2</h5>
+                <h5>$ <strong>5</strong></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 col-10 my-3 mx-auto">
+            <div class="card store-card">
+              <div class="store-img-container">
+                <img src="./img/cake-3.jpeg" alt="" class="card-img-top store-img">
+                <span class="shopping-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body d-flex justify-content-between">
+                <h5>Cake 3</h5>
+                <h5>$ <strong>5</strong></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 col-10 my-3 mx-auto">
+            <div class="card store-card">
+              <div class="store-img-container">
+                <img src="./img/cupcake-1.jpeg" alt="" class="card-img-top store-img">
+                <span class="shopping-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body d-flex justify-content-between">
+                <h5>Cupcake 1</h5>
+                <h5>$ <strong>5</strong></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 col-10 my-3 mx-auto">
+            <div class="card store-card">
+              <div class="store-img-container">
+                <img src="./img/cupcake-2.jpeg" alt="" class="card-img-top store-img">
+                <span class="shopping-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body d-flex justify-content-between">
+                <h5>Cupcake 2</h5>
+                <h5>$ <strong>5</strong></h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6 col-10 my-3 mx-auto">
+            <div class="card store-card">
+              <div class="store-img-container">
+                <img src="./img/cupcake-3.jpeg" alt="" class="card-img-top store-img">
+                <span class="shopping-item-icon">
+                  <i class="fas fa-shopping-cart"></i>
+                </span>
+              </div>
+              <div class="card-body d-flex justify-content-between">
+                <h5>Cupcake 3</h5>
+                <h5>$ <strong>5</strong></h5>
+              </div>
+            </div>
           </div>
         </div>
       </div>
