--- a/index.html
+++ b/index.html
@@ -247,6 +247,31 @@
         </div>
       </div>
     </section>
+
+  <!-- services -->
+    <section class="services py-5 text-white" id="services">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 text-center my-3">
+            <img src="./img/bread-icon.png" alt="bread-icon" >
+            <h5 class="my-3 service-title">Bread</h5>
+            <p class="w-75 mx-auto text-left service-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellat iure ipsum repudiandae non alias ducimus, a voluptatem vero nihil.</p>
+          </div>
+          <div class="col-md-4 text-center my-3">
+            <img src="./img/candy-icon.png" alt="candy-icon" >
+            <h5 class="my-3 service-title">Candy</h5>
+            <p class="w-75 mx-auto text-left service-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellat iure ipsum repudiandae non alias ducimus, a voluptatem vero nihil.</p>
+          </div>
+          <div class="col-md-4 text-center my-3">
+            <img src="./img/cupcake-icon.png" alt="cupcake-icon" >
+            <h5 class="my-3 service-title">cupcake</h5>
+            <p class="w-75 mx-auto text-left service-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellat iure ipsum repudiandae non alias ducimus, a voluptatem vero nihil.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
   <!-- bootstrap js -->
