--- a/index.html
+++ b/index.html
@@ -271,6 +271,57 @@
       </div>
     </section>
 
+  <!-- order -->
+    <section class="order py-5" id="order">
+      <div class="container">
+        <div class="row">
+          <div class="col-10 col-sm-6 mx-auto text-center">
+            <h1 class="text-capitalize">order <strong class="banner-title">cake</strong></h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-10 col-md-6 mx-auto text-center my-4">
+            <h3 class="text-capitalize">birthday cake</h3>
+            <div class="text-muted text-capitalize">
+              <p>birthday cake with a name</p>
+              <p>custom ingredients</p>
+              <p>custom size</p>
+              <p>custom design</p>
+              <button type='button' class="btn text-capitalize btn-pink mb-3">order now</button>
+              <p>starting at $5</p>
+              <img src="./img/trans-cake.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-10 col-md-6 mx-auto text-center my-4">
+            <h3 class="text-capitalize">custom cake</h3>
+            <div class="text-muted text-capitalize">
+              <p>birthday cake with a name</p>
+              <p>custom ingredients</p>
+              <p>custom size</p>
+              <p>custom design</p>
+              <button type='button' class="btn text-capitalize btn-pink mb-3">order now</button>
+              <p>starting at $5</p>
+              <img src="./img/trans-custom.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-10 col-md-6 mx-auto text-center my-4">
+            <h3 class="text-capitalize">wedding cake</h3>
+            <div class="text-muted text-capitalize">
+              <p>birthday cake with a name</p>
+              <p>custom ingredients</p>
+              <p>custom size</p>
+              <p>custom design</p>
+              <button type='button' class="btn text-capitalize btn-pink mb-3">order now</button>
+              <p>starting at $5</p>
+              <img src="./img/trans-wedding.png" class="img-fluid" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
