--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <p>custom size</p>
               <p>custom design</p>
               <button type='button' class="btn text-capitalize btn-pink mb-3">order now</button>
-              <p>starting at $5</p>
+              <p class="text-capitalize">starting at $5</p>
               <img src="./img/trans-cake.png" class="img-fluid" alt="">
             </div>
           </div>
@@ -302,7 +302,7 @@
               <p>custom size</p>
               <p>custom design</p>
               <button type='button' class="btn text-capitalize btn-pink mb-3">order now</button>
-              <p>starting at $5</p>
+              <p class="text-capitalize">starting at $5</p>
               <img src="./img/trans-custom.png" class="img-fluid" alt="">
             </div>
           </div>
@@ -315,13 +315,59 @@
               <p>custom size</p>
               <p>custom design</p>
               <button type='button' class="btn text-capitalize btn-pink mb-3">order now</button>
-              <p>starting at $5</p>
+              <p class="text-capitalize">starting at $5</p>
               <img src="./img/trans-wedding.png" class="img-fluid" alt="">
             </div>
           </div>
         </div>
       </div>
     </section>
+
+  <!-- footer -->
+    <footer class="footer" id="footer">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="footer-logo col-md-6 col-10 mx-auto text-center py-5">
+            <h1 class="text-capitalize footer-logo-text">grandma's bakery</h1>
+            <div class="footer-icons d-flex justify-content-around">
+              <a href="#" class="footer-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="#" class="footer-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="footer-icon">
+                <i class="fab fa-instagram "></i>
+              </a>
+              <a href="#" class="footer-icon">
+                <i class="fab fa-google-plus"></i>
+              </a>
+            </div>
+          </div>
+          <div class="footer-contact col-md-6 col-10 mx-auto p-5">
+            <h3 class="text-capitalize text-center mb-4">contact</h3>
+            <div class="address d-flex my-3">
+              <span class="mr-3 footer-contact-icon">
+                <i class="fas fa-map"></i>
+              </span>
+              <span>123 Main Street, San Diego CA 90101</span>
+            </div>
+            <div class="phone d-flex my-3">
+              <span class="mr-3 footer-contact-icon">
+                <i class="fas fa-phone"></i>
+              </span>
+              <span>123-345-6789</span>
+            </div>
+            <div class="email d-flex">
+              <span class="mr-3 footer-contact-icon">
+                <i class="fas fa-envelope"></i>
+              </span>
+              <span>blahblah@yahoo.com</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
