added cart and css

--- a/index.html
+++ b/index.html
@@ -103,6 +103,36 @@
                 <h1>Welcome to <strong class="banner-title">Grandma's Bakery</strong></h1>
                 <a href="#store" class="btn banner-link text-uppercase my-2">explore</a>
             </div>
+
+            <div class="cart" id="cart">
+              <div class="cart-item d-flex justify-content-between align-items-center my-4">
+                <img src="./img-cart/cake-1.jpeg" alt="" class="img-fluid rounded-circle mr-3">
+                <div class="item-text mx-5">
+                  <p class="mb-0 text-capitalize">cart item</p>
+                  <span>$</span>
+                  <span>10.99</span> 
+                </div>
+                <i class="fas fa-trash cart-trash-icon"></i>
+              </div>
+              <div class="cart-item d-flex justify-content-between align-items-centerj my-4">
+                <img src="./img-cart/cake-3.jpeg" alt="" class="img-fluid rounded-circle mr-3">
+                <div class="item-text mx-5">
+                  <p class="mb-0 text-capitalize">cart item</p>
+                  <span>$</span>
+                  <span>10.99</span> 
+                </div>
+                <i class="fas fa-trash cart-trash-icon"></i>
+              </div>
+              <div class="cart-total-container d-flex justify-content-around">
+                <h5>Total</h5>
+                <h5>$ <strong>10.00</strong></h5>
+              </div>
+              <div class="cart-btn-container d-flex justify-content-around">
+                <a href="#" class="btn btn-black mr-3 text-uppercase" id="clear-cart">clear cart</a>
+                <a href="#" class="btn btn-pink text-uppercase" id="checkout">checkout</a>
+              </div>
+            </div>
+
           </div>
         </div>
     </header>
